--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.0.2' // atau versi sesuai dengan yang Anda gunakan
+        classpath 'com.google.gms:google-services:4.3.15' // Tambahkan di sini
+    }
+}
+
 allprojects {
     repositories {
         google()
